Home page overflow fixes

--- a/main.css
+++ b/main.css
@@ -36,12 +36,6 @@ body {
     outline: none;
 }
 
-#container {
-    width: 100%;
-    height: 100%;
-    position: block;
-    z-index: -5;
-}
 
 #nav {
     display: flex;
